# solanaceae_crdtnotes

./: CMakeLists.txt
plugins/: CMakeLists.txt  plugin_crdtnotes.cpp  plugin_crdtnotes_imgui.cpp  plugin_crdtnotes_toxsync.cpp
src/: CMakeLists.txt
src/solanaceae/crdtnotes/: crdtnotes.cpp  crdtnotes.hpp  crdtnotes_contact_sync_model.hpp  crdtnotes_sync.cpp  crdtnotes_sync.hpp
src/solanaceae/crdtnotes_imgui/: crdtnotes_imgui.cpp  crdtnotes_imgui.hpp
src/solanaceae/crdtnotes_toxsync/: crdtnotes_toxsync.cpp  crdtnotes_toxsync.hpp
